--- a/plugin/MaterialUI.csproj
+++ b/plugin/MaterialUI.csproj
@@ -2,8 +2,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<Authors>Sevii</Authors>
-		<Version>1.4.13</Version>
+		<Authors>Sevii, SayuShira</Authors>
+		<Version>1.4.14</Version>
 	</PropertyGroup>
 	
 	<PropertyGroup>
